[REFACTOR] Resource proxy data model (#103)
* [REFACTOR] Resource proxy data model

* [REFACTOR] ProxyRules with only one rule

* [TEST] Re enabled test setup

* [REFACTOR] ResourceProxyRule data model

--- a/examples/get-started.yml
+++ b/examples/get-started.yml
@@ -1,23 +1,22 @@
-Type: deployment
+Type: Cargo
 ApiVersion: v1
 
 Namespace: global
 
 Resources:
-  - Name: getting-started
-    Kind: proxy_rule
+  - Name: proxy-get-started
+    Kind: ProxyRule
     Config:
       Watch:
-        - getting-started
-      Rules:
-        - Mode: Http
-          Config:
-            Domain: get-started.com
-            ListenOn: {{system.public_ip}}
-            Location:
-              - Path: /
-                TargetCargo: getting-started
-                TargetPort: 9000
+        - Name: getting-started
+      Http:
+        Domain: get-started.com
+        Type: Public
+        Locations:
+          - Path: /
+            Target:
+              Name: getting-started
+              Port: 9000
 
 Cargoes:
   - Name: getting-started
