--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -23,6 +23,9 @@ dev = ["dep:utoipa"]
 clap = { version = "4.1.3", features = ["derive"] }
 clap_mangen = { version = "0.2" }
 
+[dev-dependencies]
+serde_yaml = "0.9"
+
 [dependencies]
 nanocl_models = { version = "0.0.1", features = ["serde"] }
 bollard = { version = "0.14" }
