[FEATURE] Nanocl and Nanocld state apply and revert (#105)
* [FEATURE] Wip Nanocl and Nanocld state apply and revert

* [FEATURE] Nanocld state apply

* [FEATURE] Apply and Revert state

* [TEST] Reenabled test setup

* [REFACTOR] Improoved example and coverage

* [REFACTOR] Improoved code cov

* [REFACTOR] Improoved code cov

* [REFACTOR] Better coverage

* [REFACTOR] Better coverage

* [DEPENDENCIES] Manual update

--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -1,4 +1,4 @@
-Type: Cargo
+Type: Deployment
 ApiVersion: v1
 
 Namespace: global
@@ -8,21 +8,20 @@ Resources:
     Kind: ProxyRule
     Config:
       Watch:
-        - Name: getting-started
+        - Name: get-started
       Http:
         Domain: get-started.com
         Type: Public
         Locations:
           - Path: /
             Target:
-              Name: getting-started
+              Name: get-started
               Port: 9000
 
 Cargoes:
-  - Name: getting-started
+  - Name: get-started
     Container:
       Image: nexthat/nanocl-get-started
       Env :
         - NODE_ENV=production
         - APP=LANDING
-        - CLUSTER={{vars.CLUSTER}}
