--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nanocl_models"
+name = "nanocl_stubs"
 version = "0.0.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
