--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nanocl_client"
+name = "nanocld_client"
 version = "0.0.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
@@ -17,7 +17,7 @@ async-std = ["ntex/async-std"]
 [dependencies]
 bollard = "0.14"
 futures = "0.3.25"
-nanocl_models = { version = "0.0.1", features = ["serde"] }
+nanocl_stubs = { version = "0.0.1", features = ["serde"] }
 ntex = { version = "0.6.1" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
