[REFACTOR] nanocld_client readme.md

--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -3,8 +3,8 @@ name = "nanocld_client"
 version = "0.0.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "Nanocl http client"
-readme = "README.md"
+description = "The Nanocl daemon api client"
+readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
 repository = "https://github.com/nxthat/nanocl"
