[REFACTOR] Release Dockerfile for nanocld

--- a/bin/nanocld/Dockerfile
+++ b/bin/nanocld/Dockerfile
@@ -1,14 +1,14 @@
 # stage 1 - generate recipe file for dependencies
-from rust:1.65.0-alpine3.16 as planner
+FROM rust:1.67.0-alpine3.17 as planner
 
 WORKDIR /app
 RUN apk add gcc g++ make
 RUN cargo install cargo-chef --locked
-COPY ./Cargo.toml ./
+COPY ./bin/nanocld/Cargo.toml ./
 RUN cargo chef prepare --recipe-path recipe.json
 
 # state 2 - build our dependencies
-from rust:1.65.0-alpine3.16 as cacher
+FROM rust:1.67.0-alpine3.17 as cacher
 WORKDIR /app
 COPY --from=planner /usr/local/cargo/bin/cargo-chef /usr/local/cargo/bin/cargo-chef
 COPY --from=planner /app .
@@ -17,24 +17,25 @@ ENV RUSTFLAGS="-C target-feature=-crt-static"
 RUN cargo chef cook --release --recipe-path recipe.json
 
 # stage 3 - build our project
-from rust:1.65.0-alpine3.16 as builder
+FROM rust:1.67.0-alpine3.17 as builder
 WORKDIR /app
 COPY --from=cacher /usr/local/cargo /usr/local/cargo
 COPY --from=cacher /app .
-COPY ./migrations ./migrations
-COPY ./src ./src
-COPY ./build.rs .
-RUN apk add musl-dev libpq-dev
+COPY ./bin/nanocld/migrations ./migrations
+COPY ./bin/nanocld/src ./src
+COPY ./bin/nanocld/build.rs .
+COPY .git ./.git
+RUN apk add musl-dev libpq-dev git
 ENV RUSTFLAGS="-C target-feature=-crt-static"
 RUN cargo build --release
 
 # stage 4 - create runtime image
-from alpine:3.16.2
+from alpine:3.17
 
 RUN apk add libgcc libpq util-linux
 
 COPY --from=builder /app/target/release/nanocld /usr/local/bin/nanocld
 
-COPY entrypoint.sh /entrypoint.sh
+COPY ./bin/nanocld/entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/bin/sh", "/entrypoint.sh"]
