--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -50,3 +50,6 @@ tokio = { version = "1.23.1", features = ["fs"] }
 
 # Dependency required with dev feature
 utoipa = { version = "3.0.1", features = ["uuid", "chrono"], optional = true }
+hyper = "0.14.24"
+tokio-util = "0.7.4"
+futures-util = "0.3.26"
