--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ opt-level = 3
 [patch.crates-io]
 nanocl_stubs = { path = "crates/nanocl_stubs" }
 nanocld_client = { path = "crates/nanocld_client" }
+ntex-multipart = { git = "https://github.com/ntex-rs/ntex-extras.git" }
