--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -47,6 +47,10 @@ diesel = { version = "2.0.1", features = ["postgres", "r2d2", "chrono", "uuid", 
 rustls = "0.20.8"
 rustls-pemfile = "1.0.1"
 tokio = { version = "1.23.1", features = ["fs"] }
+ntex-multipart = "0.2"
 
 # Dependency required with dev feature
 utoipa = { version = "3.0.1", features = ["uuid", "chrono"], optional = true }
+hyper = "0.14.24"
+tokio-util = "0.7.4"
+futures-util = "0.3.26"
