--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -24,13 +24,12 @@ serde = { version = "1.0", features = ["derive"] }
 clap_complete = "4.1.1"
 clap_mangen = { version = "0.2" }
 tabled = "0.10.0"
-nanocl_stubs = { version = "*", features = ["serde"] }
+nanocld_client = { version = "0.0.3" }
 bollard = { version = "0.14" }
 chrono = "0.4.23"
 
 [dependencies]
 nanocld_client = { version = "0.0.3", features = ["tokio"] }
-nanocl_stubs = { version = "0.0.2", features = ["serde"] }
 bollard = { version = "0.14" }
 futures = "0.3"
 serde_yaml = "0.9"
