[REFACTOR] Added default features to tokio for nanocld_client

--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://docs.next-hat.com/docs/guides/nanocl"
 repository = "https://github.com/nxthat/nanocl"
 
 [features]
-default = []
+default = ["tokio"]
 tokio = ["ntex/tokio"]
 glommio = ["ntex/glommio"]
 async-std = ["ntex/async-std"]
