--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         sudo ./scripts/prepare_tests.sh
         sudo ./scripts/install_docker.ubuntu.sh
+        sudo mkdir /tmp
+        sudo chmod 777 /tmp
     # Setup daemon for the tests
     - name: Setup
       run: |
