--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -20,7 +20,7 @@ tokio-util = "0.7.4"
 tokio = { version = "1.25.0", features = ["fs"] }
 
 [dependencies]
-bollard = "0.14"
+bollard = { version = "0.14", git = "https://github.com/leon3s/bollard" }
 futures = "0.3.25"
 nanocl_stubs = { version = "0.0.5", features = ["serde"] }
 ntex = { version = "0.6.1" }
