Fix image pulling (#119)
* [BUGFIX] Image pulling

* [BUGFIX] test image path

* [BUGFIX] Test image import

* [BUGFIX] Increased timeout time

* Update tests.yml

* Update tests.yml

* [REFACTOR] write in thread pool

* Update tests.yml

* [REFACTOR] Nanocld import event boxed

* [TEST] Commented out test that fail in CI

* [REFACTOR] Nanocl better apply and revert function

* [TEST] Commented import tarball test

* [FEATURE] Https ProxyConf

* [UPDATE] Bollard version

* [RELEASE] crates new version

* [REFACTOR] use bollard-next

* [RELEASE] Create stubs and client

--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanocl_stubs"
-version = "0.0.4"
+version = "0.0.7"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "Nanocl shared models"
@@ -13,7 +13,7 @@ repository = "https://github.com/nxthat/nanocl"
 serde = ["dep:serde", "uuid/serde"]
 
 [dependencies]
-bollard = "0.14"
+bollard-next = { version = "0.14.1" }
 uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
