--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -27,8 +27,8 @@ clap_mangen = { version = "0.2" }
 serde_yaml = "0.9"
 
 [dependencies]
-nanocl_stubs = { version = "0.0.4", features = ["serde"] }
-bollard = { version = "0.14" }
+nanocl_stubs = { version = "0.0.7", features = ["serde"] }
+bollard-next = { version = "0.14.1" }
 r2d2 = "0.8"
 log = "0.4.17"
 futures = "0.3"
