--- a/bin/nanocld/Dockerfile.dev
+++ b/bin/nanocld/Dockerfile.dev
@@ -1,14 +1,7 @@
 # Create Builder image
-FROM rust:1.64.0-alpine3.16
+FROM rust:1.67.0-alpine3.17
 
 # Install required dependencies
-RUN apk add openssl
-RUN apk add libpq-dev
-RUN apk add gcc
-RUN apk add g++
-RUN apk add make
-RUN apk add tzdata
-RUN apk add util-linux
 RUN cargo install cargo-watch
 
 RUN mkdir -p /run/nanocl
@@ -20,4 +13,4 @@ ENV RUSTFLAGS="-C target-feature=-crt-static"
 
 EXPOSE 8383/tcp
 
-CMD ["cargo", "watch", "-x", "run --bin nanocld"]
+CMD ["cargo", "watch"]
