--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanocld_client"
-version = "0.0.8"
+version = "0.0.9"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "The Nanocl daemon api client"
@@ -8,6 +8,9 @@ readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl"
 repository = "https://github.com/nxthat/nanocl"
+
+[lib]
+bench = false
 
 [features]
 default = ["tokio"]
@@ -22,7 +25,7 @@ tokio = { version = "1.25.0", features = ["fs"] }
 [dependencies]
 bollard-next = { version = "0.14.1" }
 futures = "0.3.25"
-nanocl_stubs = { version = "0.0.8", features = ["serde"] }
+nanocl_stubs = { version = "0.0.9", features = ["serde"] }
 ntex = { version = "0.6.1" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
