--- a/bin/nanocld/Dockerfile.dev
+++ b/bin/nanocld/Dockerfile.dev
@@ -1,16 +1,20 @@
-# Create Builder image
+# Nanocld daemon development image
 FROM rust:1.67.0-alpine3.17
 
-# Install required dependencies
-RUN apk add gcc g++ make libgcc libpq util-linux tzdata
+## Setup cargo-watch
+RUN apk add gcc g++ make
 RUN cargo install cargo-watch
 
-RUN mkdir -p /run/nanocl
+## Install dependencies
+RUN apk add libpq-dev util-linux tzdata git
+
+## Setup the project
 RUN mkdir -p /project
 WORKDIR /project
 
+## Setup the environment
 ENV TZ=Europe/Paris
-
 ENV RUSTFLAGS="-C target-feature=-crt-static"
 
+## Setup the entrypoint
 ENTRYPOINT ["cargo", "watch"]
