--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanocl_stubs"
-version = "0.0.8"
+version = "0.0.9"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "Nanocl shared models"
@@ -8,6 +8,9 @@ readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
 repository = "https://github.com/nxthat/nanocl"
+
+[lib]
+bench = false
 
 [features]
 serde = ["dep:serde", "uuid/serde"]
