--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -42,8 +42,8 @@ jobs:
       run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t $BINARY_NAME:nightly-$VERSION -f ./bin/nanocld/Dockerfile .
     - name: Tag image
       run: |
-        docker tag $BINARY_NAME:nightly-$VERSION $BINARY_NAME:nightly
-        docker tag $BINARY_NAME:nightly-$VERSION $BINARY_NAME:nightly-$VERSION
+        docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly
+        docker tag $BINARY_NAME:nightly-$VERSION nexthat/$BINARY_NAME:nightly-$VERSION
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -51,8 +51,8 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Pull image
       run: |
-        docker push $BINARY_NAME:nightly
-        docker push $BINARY_NAME:nightly-$VERSION
+        docker push nexthat/$BINARY_NAME:nightly
+        docker push nexthat/$BINARY_NAME:nightly-$VERSION
     - name: Export image
       run: docker save $BINARY_NAME:nightly-$IMAGE_VERSION | gzip > /tmp/$BINARY_NAME-nightly-$IMAGE_VERSION.tar.gz
     - name: Test if release already exists
