bugfix(workflow) nightly nanocld version

--- a/.github/workflows/nightly_nanocld.yml
+++ b/.github/workflows/nightly_nanocld.yml
@@ -54,22 +54,22 @@ jobs:
     #     docker push nexthat/$BINARY_NAME:nightly
     #     docker push nexthat/$BINARY_NAME:nightly-$VERSION
     - name: Export image
-      run: docker save $BINARY_NAME:nightly-$IMAGE_VERSION | gzip > /tmp/$BINARY_NAME-nightly-$IMAGE_VERSION.tar.gz
+      run: docker save $BINARY_NAME:nightly-$VERSION | gzip > /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz
     - name: Test if release already exists
       id: release-exists
       continue-on-error: true
-      run: gh release view $BINARY_NAME-nightly-$IMAGE_VERSION
+      run: gh release view $BINARY_NAME-nightly-$VERSION
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Create new draft release
       if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-      run: gh release create -d $BINARY_NAME-nightly-$IMAGE_VERSION --generate-notes /tmp/$BINARY_NAME-nightly-$IMAGE_VERSION.tar.gz#nanocld-image
+      run: gh release create -d $BINARY_NAME-nightly-$VERSION --generate-notes /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#nanocld-image
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
       if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
       run: >-
-        gh release delete-asset -y $BINARY_NAME-nightly-$IMAGE_VERSION nanocl.$IMAGE_VERSION.tar.gz;
-        gh release upload $BINARY_NAME-nightly-$IMAGE_VERSION /tmp/$BINARY_NAME-nightly-$IMAGE_VERSION.tar.gz#nanocld-image;
+        gh release delete-asset -y $BINARY_NAME-nightly-$VERSION nanocl.$VERSION.tar.gz;
+        gh release upload $BINARY_NAME-nightly-$VERSION /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#nanocld-image;
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
