--- a/.github/workflows/publish_nanocld.yml
+++ b/.github/workflows/publish_nanocld.yml
@@ -12,5 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download saved image
+      - name: Print info
         run: echo "Name: ${{ github.event.release.name }} Description: ${{ github.event.release.body }}"
+      - name: Get bin name
+        run: echo "CHANNEL=$(echo ${{ github.event.release.name }} | awk -F- '{print $1}')" >> $GITHUB_ENV
+      - name: Get bin name
+        run: echo "BINARY_NAME=$(echo ${{ github.event.release.name }} | awk -F- '{print $2}')" >> $GITHUB_ENV
+      - name: Set version
+        run: echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
+      - name: Print info
+        run: |
+          echo $CHANNEL
+          echo $BINARY_NAME
+          echo $VERSION
+      - name: Publish nightly
+        if: env.CHANNEL == 'nightly'
