bugfix(workflow) publish

--- a/.github/workflows/publish_nanocld.yml
+++ b/.github/workflows/publish_nanocld.yml
@@ -23,5 +23,5 @@ jobs:
           echo $CHANNEL
           echo $BINARY_NAME
           echo $VERSION
-      - name: Publish nightly
-        if: env.CHANNEL == 'nightly'
+      # - name: Publish nightly
+      #   if: env.CHANNEL == 'nightly'
