--- a/.github/workflows/publish_nanocld.yml
+++ b/.github/workflows/publish_nanocld.yml
@@ -12,16 +12,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get bin name
-        run: echo "CHANNEL=$(echo ${{ github.event.release.name }} | awk -F- '{print $1}')" >> $GITHUB_ENV
-      - name: Get bin name
-        run: echo "BINARY_NAME=$(echo ${{ github.event.release.name }} | awk -F- '{print $2}')" >> $GITHUB_ENV
-      - name: Set version
-        run: echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
+      - name: Get info
+        run: |
+          echo "CHANNEL=$(echo ${{ github.event.release.name }} | awk -F- '{print $1}')" >> $GITHUB_ENV
+          echo "BINARY_NAME=$(echo ${{ github.event.release.name }} | awk -F- '{print $2}')" >> $GITHUB_ENV
+          echo "VERSION=$(echo ${{ github.event.release.name }} | awk -F- '{print $3}')" >> $GITHUB_ENV
       - name: Print info
         run: |
           echo $CHANNEL
           echo $BINARY_NAME
           echo $VERSION
-      # - name: Publish nightly
-      #   if: env.CHANNEL == 'nightly'
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Publish nanocld nightly
+        if: env.CHANNEL == 'nightly' && env.BINARY_NAME == 'nanocld'
+        run: |
+          gh release download ${{ github.event.release.tagName }} -p nanocld-nightly-$VERSION.tar.gz
+          cat nanocld-nightly-$VERSION.tar.gz | docker load
+          docker tag nanocld:nightly-$VERSION nexthat/nanocld:nightly
+          docker tag nanocld:nightly-$VERSION nexthat/nanocld:nightly-$VERSION
+          docker push nexthat/nanocld:nightly
+          docker push nexthat/nanocld:nightly-$VERSION
+
