--- a/.github/workflows/publish_nanocld.yml
+++ b/.github/workflows/publish_nanocld.yml
@@ -2,7 +2,7 @@ name: Publish nanocld release
 
 on:
   release:
-    types: [published]
+    types: [published, prereleased]
 
 env:
   CARGO_TERM_COLOR: always
@@ -36,4 +36,3 @@ jobs:
           docker tag nanocld:nightly-$VERSION nexthat/nanocld:nightly-$VERSION
           docker push nexthat/nanocld:nightly
           docker push nexthat/nanocld:nightly-$VERSION
-
