feature(daemon) metrics save in database

--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -52,4 +52,5 @@ libc = "0.2.139"
 
 # Dependency required with dev feature
 utoipa = { version = "3.0.2", features = ["uuid", "chrono"], optional = true }
-metrsd_client = "0.1.0"
+metrsd_client = "0.1.1"
+chrono = { version = "0.4.23", features = ["serde"] }
