--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,8 +41,9 @@ jobs:
     # Setup daemon for the tests
     - name: Setup
       run: |
+        docker pull cockroachdb/cockroach:v22.2.5
+        docker pull nexthat/metrsd:v0.1.0
         docker pull nexthat/nanocl-get-started:latest
-        docker pull cockroachdb/cockroach:v21.2.17
         cargo make run-daemon -- --init
         docker network ls
         cargo make run-daemon &
