--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
         docker network ls
         cargo make run-daemon &
         sleep 5
-        chmod 777 -R /run/nanocl
+        sudo chmod 777 -R /run/nanocl
     # Run coverage
     - name: Run tests
       run: cargo make test-debug
