--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: Tests
 
-on: [push, pull_request]
+on: [push]
 
 env:
   CARGO_TERM_COLOR: always
@@ -9,7 +9,7 @@ jobs:
   ubuntu_test:
     strategy:
       fail-fast: true
-    runs-on: ubuntu-latest
+    runs-on: nanocl-runner
 
     steps:
     - uses: actions/checkout@v3
@@ -48,6 +48,7 @@ jobs:
         docker network ls
         cargo make run-daemon &
         sleep 5
+        sudo chmod 777 -R /run/nanocl
     # Run coverage
     - name: Run tests
       run: cargo make covgen
