--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
   ubuntu_test:
     strategy:
       fail-fast: true
-    runs-on: nanocl-runner
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
